--- a/.github/workflows/dianshijia.yml
+++ b/.github/workflows/dianshijia.yml
@@ -4,7 +4,7 @@ name: 电视家
 on:
   workflow_dispatch:
   schedule:
-     - cron: '*/15 4,12 * * *'
+     - cron: '0 23,4,14 * * *'
   watch:
     types: started
 jobs:
